# claudette

./: .claudette_memory.json  .gitignore  README.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
skills/: example_skill.py
src/claudette/: __init__.py  assistant.py  audio_processing.py  hotkey.py  notifications.py  offline.py  personalities.py  skills.py  sounds.py  tray.py
src/claudette/web/: server.py
src/claudette/web/routes/: api.py
src/claudette/web/static/: index.html
src/claudette/web/static/css/: styles.css
src/claudette/web/static/js/: app.js
tests/: __init__.py  conftest.py  test_assistant.py  test_audio_processing.py  test_hotkey.py  test_notifications.py  test_offline.py  test_package.py  test_personalities.py  test_skills.py  test_sounds.py  test_tray.py  test_web.py
